--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 
-logging.level.org.springframework.boot.autoconfigure.mongo.embedded=info
-logging.level.org.mongodb=info
+logging.level.org.springframework.boot.autoconfigure.mongo.embedded=warn
+logging.level.org.springframework.web=info
+logging.level.org.mongodb=warn
+logging.level.root=warn
 
 spring.mongodb.embedded.storage.database-dir=${HOME}/.buggy-storage
