--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'org.asciidoctor.convert' version '1.5.8'
     id 'java'
+    id 'com.adarshr.test-logger' version '1.7.0'
+
 }
 
 group = 'de.dkutzer'
@@ -42,4 +44,18 @@ test {
 asciidoctor {
     inputs.dir snippetsDir
     dependsOn test
+    attributes 'snippets': snippetsDir, 'projectdir': snippetsDir.toString()
+
+}
+
+bootJar {
+    version = "${project.version}"
+    dependsOn asciidoctor
+    from("${asciidoctor.outputDir}/html5") {
+        into 'static/docs'
+    }
+}
+
+springBoot {
+    buildInfo()
 }
